<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            app:title="@string/lbl_toolbar"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--view pager banner-->
            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner"/>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:dotsSize="@dimen/margin_medium"
                    android:elevation="@dimen/margin_small"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1.0"
                    app:selectedDotColor="@color/colorAccent"
                    app:progressMode="false"
                    android:layout_gravity="bottom|center"
                    />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmsAndSeries"
                android:text="@string/lbl_best_popular_films_and_serials"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"
                android:layout_below="@id/flBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

           <!-- recycler of movie list-->
            <include
                android:id="@+id/viewPodMovieList"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_below="@id/tvBestPopularFilmsAndSeries"
                layout="@layout/view_pod_movie_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--check movie showtimes card-->
            <RelativeLayout
                android:id="@+id/rlCheckMovieShowtime"
                android:background="@color/colorPrimaryLight"
                android:layout_below="@id/viewPodMovieList"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_showtimes">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowtimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:text="@string/lbl_check_movie_nshowtimes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold" />
<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:id="@+id/tvCheckMovieShowtimes"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                     />
                
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimesLocation"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp"
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"/>
                
            </RelativeLayout>

            <!--tab of movie genre -->
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_below="@id/rlCheckMovieShowtime"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/colorPrimary"
                app:tabTextColor="@color/colorSecondaryText"
                app:tabSelectedTextColor="@color/white"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--view pod movie genre list -->
            <FrameLayout
                android:id="@+id/flMovieGenre"
                android:layout_below="@id/tabLayoutGenre"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/viewPodMovieListByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_pod_movie_list"/>

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCase"
                android:layout_below="@id/flMovieGenre"
                android:text="@string/lbl_showcases"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowCase"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:text="@string/lbl_more_showcases"
                android:textStyle="bold"
                android:textColor="@color/white"
               android:layout_alignBaseline="@id/tvShowCase"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- recycler view of show cases-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowCases"
                android:layout_marginTop="@dimen/margin_card_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:layout_below="@id/tvShowCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- view pod best actor-->
            <include
                android:id="@+id/viewPodActors"
                android:layout_below="@id/rvShowCases"
                layout="@layout/view_pod_actor_list"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>